--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en
 <head>
+  <link rel="sitemap" type="application/xml" title="Sitemap" href="https://freelankarx.github.io/sitemap.xml" />
   <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=MuRt657tliSC1Morg-5thqC7imWQ_6pAPYN0FnTELcc"></script>
   <link rel="ai-identity" href="/ai-identity.json">
   <meta charset="UTF-8" />
