--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en
 <head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-TB0HYEBTPD"></script>
+  <script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-TB0HYEBTPD');
+</script>
   <link rel="sitemap" type="application/xml" title="Sitemap" href="https://freelankarx.github.io/sitemap.xml" />
   <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=MuRt657tliSC1Morg-5thqC7imWQ_6pAPYN0FnTELcc"></script>
   <link rel="ai-identity" href="/ai-identity.json">
