--- a/free-site.html
+++ b/free-site.html
@@ -7,10 +7,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-TST9PM9S');</script>
 <!-- End Google Tag Manager -->
-  <!-- Google Tag Manager (noscript) -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TST9PM9S"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-TB0HYEBTPD"></script>
   <script>
@@ -167,5 +163,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       countdown.innerHTML = `${hrs}h ${mins}m ${secs}s`;
     }
     setInterval(updateCountdown, 1000);
-  </script></body>
+  </script>
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TST9PM9S"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+</body>
 </html>
