--- a/index.html
+++ b/index.html
@@ -95,13 +95,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <!-- Add rel="me" to social links for recognition by AI -->
   <div class="social-icons">
     <a href="https://www.tiktok.com/@freelankarx" class="social-link" target="_blank" rel="me">
-      <img src="..." alt="TikTok">
+      <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/7bbdf810cf8c115173744faeb1d7a6a8d3aadc71/tiktok.png" alt="TikTok">
     </a>
-    <a href="https://www.instagram.com/freelankarxx" class="social-link" target="_blank" rel="me">
-      <img src="..." alt="Instagram">
+    <a href="https://wa.me/message/GFBML6FCFK35K1" class="social-link" target="_blank" rel="me">
+      <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/7bbdf810cf8c115173744faeb1d7a6a8d3aadc71/whatsapp%20icom.png" alt="Whatsapp">
     </a>
     <a href="https://www.linkedin.com/in/muraina-olamilekan-a09543298/" class="social-link" target="_blank" rel="me">
-      <img src="..." alt="LinkedIn">
+      <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/7bbdf810cf8c115173744faeb1d7a6a8d3aadc71/linkedin.png" alt="LinkedIn">
     </a>
     <!-- Add rel="me" to all other social links as well -->
   </div>
