--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <script src="script.js"></script>
 
   <!-- === Trusted By Strip === -->
-<section style="background:#f9f9f9;padding:15px;text-align:center;">
+<section style="background:#00000;padding:15px;text-align:center;">
   <h3 style="margin-bottom:10px;font-family:sans-serif;">Trusted By Brands & Platforms</h3>
   <div style="display:flex;justify-content:center;gap:20px;flex-wrap:wrap;align-items:center;">
     <img src="https://cdn.shopify.com/static/shopify-favicon.png" alt="Shopify" width="40">
