--- a/index.html
+++ b/index.html
@@ -117,7 +117,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous" defer></script>
   <link rel="stylesheet" href="/styles.css?v=1.2" />
-</html>
+</body>
+</head>
+  
 <body>
   <!-- Header Section with Video Banner -->
   <header>
