--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <!-- === Geo Targeting for Rich Countries === -->
   <meta name="geo.region" content="US,CA,AU,UK,DE,FR,CH,SG,AE">
   <meta name="geo.placename" content="United States, Canada, Australia, United Kingdom, Germany, France, Switzerland, Singapore, UAE">
-  <link rel="alternate" hreflang="en-us" href="https://freelankarx.github.io/Freelankarx/" />
-  <link rel="alternate" hreflang="en-gb" href="https://freelankarx.github.io/Freelankarx/" />
-  <link rel="alternate" hreflang="en-au" href="https://freelankarx.github.io/Freelankarx/" />
-  <link rel="alternate" hreflang="en-ca" href="https://freelankarx.github.io/Freelankarx/" />
-  <link rel="alternate" hreflang="en-de" href="https://freelankarx.github.io/Freelankarx/" />
-  <link rel="alternate" hreflang="en-sg" href="https://freelankarx.github.io/Freelankarx/" />
-  <link rel="alternate" hreflang="en-ae" href="https://freelankarx.github.io/Freelankarx/" />
+  <link rel="alternate" hreflang="en-us" href="https://freelankarx.com/" />
+  <link rel="alternate" hreflang="en-gb" href="https://freelankarx.com/" />
+  <link rel="alternate" hreflang="en-au" href="https://freelankarx.com/" />
+  <link rel="alternate" hreflang="en-ca" href="https://freelankarx.com/" />
+  <link rel="alternate" hreflang="en-de" href="https://freelankarx.com/" />
+  <link rel="alternate" hreflang="en-sg" href="https://freelankarx.com/" />
+  <link rel="alternate" hreflang="en-ae" href="https://freelankarx.com/" />
 
 
   <!-- AI Identity File -->
