--- a/toolkit.html
+++ b/toolkit.html
@@ -1,47 +1,109 @@
 <!DOCTYPE html><html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Free AI e‑Com Toolkit | Freelankarx</title>  <!-- Google Font -->  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Download Your Free AI Toolkit | Freelankarx</title>  <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">  <style>
-    :root{
-      --primary:#0E77FF; /* same blue as freelankarx.com */
-      --dark:#0D0D0D;
-      --light:#F5F7FA;
+    :root {
+      --primary: #0E77FF;
+      --dark: #0D0D0D;
+      --light: #F5F7FA;
     }
-    *{box-sizing:border-box;margin:0;padding:0;font-family:Poppins,Arial,Helvetica,sans-serif;}
-    body{background:var(--light);color:var(--dark);line-height:1.5;}
-    header{padding:24px;text-align:center;}
-    header img{max-width:170px;height:auto;}
-    .hero{display:flex;flex-direction:column;align-items:center;text-align:center;padding:60px 20px 40px;}
-    .hero h1{font-size:2.4rem;font-weight:600;margin-bottom:18px;color:var(--dark);}
-    .hero p{font-size:1.05rem;margin-bottom:28px;max-width:460px;color:#333;}
-    .form-wrapper{width:100%;max-width:500px;background:#fff;padding:28px 30px;border-radius:14px;box-shadow:0 6px 20px rgba(0,0,0,.08);}
-    /* MailerLite form elements inherit global font, but we force full width */
-    .form-wrapper form input, .form-wrapper form button{width:100%;}
-    .footer{padding:40px 12px;font-size:.85rem;color:#666;text-align:center;}
-    @media(min-width:768px){
-      .hero h1{font-size:2.8rem;}
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Poppins', sans-serif;
+    }
+    body {
+      background: var(--light);
+      color: var(--dark);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      padding: 20px;
+    }
+    .container {
+      background: #fff;
+      padding: 40px;
+      border-radius: 12px;
+      max-width: 600px;
+      width: 100%;
+      box-shadow: 0 8px 30px rgba(0,0,0,0.08);
+      text-align: center;
+    }
+    h1 {
+      font-size: 2.2rem;
+      color: var(--dark);
+      margin-bottom: 18px;
+    }
+    p {
+      font-size: 1rem;
+      margin-bottom: 20px;
+      color: #444;
+    }
+    form {
+      margin-top: 20px;
+    }
+    input[type="email"] {
+      padding: 12px;
+      width: 100%;
+      max-width: 400px;
+      font-size: 1rem;
+      border-radius: 6px;
+      border: 1px solid #ccc;
+      margin-bottom: 16px;
+    }
+    button {
+      padding: 14px 30px;
+      background: var(--primary);
+      border: none;
+      color: #fff;
+      font-weight: 600;
+      border-radius: 6px;
+      cursor: pointer;
+      font-size: 1rem;
+      transition: background 0.3s ease;
+    }
+    button:hover {
+      background: #065fd0;
+    }
+    .note {
+      background: #eef6ff;
+      color: #0b3d91;
+      font-size: 0.95rem;
+      padding: 12px 18px;
+      border-left: 4px solid var(--primary);
+      border-radius: 6px;
+      margin-top: 20px;
+    }
+    .footer {
+      margin-top: 30px;
+      font-size: 0.85rem;
+      color: #666;
     }
   </style></head>
 <body>
-  <header>
-    <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/main/freelankarx%20logo.png" alt="Freelankarx logo" />
-  </header>  <section class="hero">
-    <h1>Download the AI e‑Com Toolkit Trusted by 6‑Figure Stores</h1>
-    <p>Build Shopify stores, funnels & ads that sell while you sleep. Grab the exact tool‑stack in one click (free for a limited time).</p><div class="form-wrapper">
-  <!-- ➡️  REPLACE the entire block below with MailerLite EMBED code  -->
-  <!-- === BEGIN MailerLite Embed Placeholder === -->
-  <form>
-    <input type="email" placeholder="Your email" style="padding:12px 14px;border:1px solid #ccc;border-radius:8px;margin-bottom:14px" required>
-    <button type="submit" style="padding:14px;border:none;border-radius:8px;background:var(--primary);color:#fff;font-weight:600;cursor:pointer">Get the Toolkit →</button>
-  </form>
-  <!-- ===  END MailerLite Embed Placeholder === -->
+  <div class="container">
+    <h1>Get the Free AI eCommerce Toolkit</h1>
+    <p>The exact tools, prompts & platforms that 6-figure Shopify brands use. Sent instantly to your inbox.</p><!-- Begin MailerLite Embed Form -->
+<form action="https://assets.mailerlite.com/jsonp/27696621/forms/94666111682353789/subscribe" method="post" target="_blank" onsubmit="setTimeout(function(){ window.location='https://freelankarx.com/success'; }, 300);">
+  <input type="email" name="fields[email]" placeholder="Enter your best email" required>
+  <br>
+  <button type="submit">Get My Free Toolkit</button>
+</form>
+<!-- End MailerLite Embed Form -->
+
+<div class="note">
+  You'll also get a short email series showing how to build your first $1k AI-powered store 💡
 </div>
 
-  </section>  <div class="footer">
-    © 2025 Freelankarx. <a href="https://freelankarx.com" style="color:var(--primary);text-decoration:none;">Back to main site</a>
+<div class="footer">
+  © 2025 Freelankarx. Built with 💙 for smart entrepreneurs.
+</div>
+
   </div>
 </body>
 </html>
