--- a/toolkit.html
+++ b/toolkit.html
@@ -89,7 +89,7 @@
   <div class="container">
     <h1>Get the Free AI eCommerce Toolkit</h1>
     <p>The exact tools, prompts & platforms that 6-figure Shopify brands use. Sent instantly to your inbox.</p><!-- Begin MailerLite Embed Form -->
-<form action="https://assets.mailerlite.com/jsonp/27696621/forms/94666111682353789/subscribe" method="post" target="_blank" onsubmit="setTimeout(function(){ window.location='https://freelankarx.com/success'; }, 300);">
+<form action="https://assets.mailerlite.com/jsonp/27696621/forms/94666111682353789/subscribe" method="post" target="_blank" onsubmit="setTimeout(function(){ window.location='https://freelankarx.com/thank-you.html'; }, 300);">
   <input type="email" name="fields[email]" placeholder="Enter your best email" required>
   <br>
   <button type="submit">Get My Free Toolkit</button>
