--- a/thank-you.html
+++ b/thank-you.html
@@ -67,7 +67,7 @@
 </head>
 <body>
 
-  <img src="/logo.png" alt="Freelankarx Logo" class="logo" />
+  <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/main/freelankarx%20logo.png" alt="Freelankarx Logo" class="logo" />
 
   <h1>🎉 You're in!</h1>
 
