--- a/toolkit.html
+++ b/toolkit.html
@@ -54,7 +54,8 @@ footer { text-align: center; padding: 30px 20px; font-size: 0.85rem; color: #8e9
     <a href="https://freelankarx.com"><img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/main/freelankarx%20logo.png" alt="Freelankarx logo" /></a>
     <nav><a href="https://freelankarx.com">← Back to Home</a></nav>
   </header>  <section class="hero">
-    <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/blob/main/Ai-toolkit-banner.png" alt="AI Toolkit Cover" class="cover" />
+    <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/4da80bfdb1c15c8d8858e436a00f85d98c074cad/Ai-toolkit-banner.png" 
+    alt="The FREE AI Shopify Toolkit Used by 6-Figure Brands" class="cover" />
     <h1>Download the Free AI Shopify Toolkit</h1>
     <p class="sub">Get the exact tools & prompts 6‑figure stores use to launch, write copy, recover carts and run smart ads — all in one click.</p>
 <div class="form-panel">
