--- a/toolkit.html
+++ b/toolkit.html
@@ -35,7 +35,7 @@ nav a { color: var(--accent); font-size: 0.95rem; text-decoration: none; }
   content: "";
   position: absolute;
   inset: 0;
-  background: rgba(0, 0, 0, 0.5); /* dark overlay to boost text readability */
+  background: rgba(0, 0, 0, 0.9); /* dark overlay to boost text readability */
   z-index: 1;
 }
 
@@ -98,8 +98,7 @@ footer { text-align: center; padding: 30px 20px; font-size: 0.85rem; color: #8e9
     <a href="https://freelankarx.com"><img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/main/freelankarx%20logo.png" alt="Freelankarx logo" /></a>
     <nav><a href="https://freelankarx.com">← Back to Home</a></nav>
   </header>  <section class="hero">
-    <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/4da80bfdb1c15c8d8858e436a00f85d98c074cad/Ai-toolkit-banner.png" 
-    alt="The FREE AI Shopify Toolkit Used by 6-Figure Brands" class="cover" />
+     class="cover" />
     <h1>Download the Free AI Shopify Toolkit</h1>
     <p class="sub">Get the exact tools & prompts 6‑figure stores use to launch, write copy, recover carts and run smart ads — all in one click.</p>
 <div class="form-panel">
