--- a/toolkit.html
+++ b/toolkit.html
@@ -100,7 +100,7 @@ footer { text-align: center; padding: 30px 20px; font-size: 0.85rem; color: #8e9
   </header>  <section class="hero">
      class="cover" />
     <h1>Download the Free AI Shopify Toolkit</h1>
-    <p class="sub">Get the exact tools & prompts 6‑figure stores use to launch, write copy, recover carts and run smart ads — all in one click.</p>
+    <p class="sub">Get the exact tools & prompts 6‑figure stores use to launch, write copy, recover carts and run smart ads, all in one click.</p>
 <div class="form-panel">
   <style type="text/css">@import url("https://assets.mlcdn.com/fonts.css?version=1750852");</style>
     <style type="text/css">
