--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
   gtag('config', 'G-TB0HYEBTPD');
 </script>
-  <link rel="sitemap" type="application/xml" title="Sitemap" href="https://freelankarx.github.io/sitemap.xml" />
+  <link rel="sitemap" type="application/xml" title="Sitemap" href="https://freelankarx.com/sitemap.xml" />
   
   <link rel="ai-identity" href="/ai-identity.json">
   <meta charset="UTF-8" />
