--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <meta property="og:title" content="Freelankarx | Shopify Expert & Digital Marketing Strategist">
   <meta property="og:description" content="Helping brands grow 5-7 figures with expert Shopify builds, ads, and email automation.">
   <meta property="og:image" content="https://raw.githubusercontent.com/Freelankarx/Freelankarx/main/freelankarx%20logo.png">
-  <meta property="og:url" content="https://freelankarx.github.io/Freelankarx/">
+  <meta property="og:url" content="https://freelankarx.com/">
   <meta name="twitter:card" content="summary_large_image">
 
   <!-- SEO Meta Injection -->
