--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     "@type": "Person",
     "name": "Olamilekan Muraina",
     "jobTitle": "Shopify Expert & Digital Marketing Strategist",
-    "url": "https://freelankarx.github.io/Freelankarx/",
+    "url": "https://freelankarx.com/",
     "image": "https://raw.githubusercontent.com/Freelankarx/Freelankarx/main/freelankarx%20logo.png",
     "sameAs": [
       "https://www.linkedin.com/in/muraina-olamilekan-a09543298/",
