--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en
 <head>
+  <meta name="ahrefs-site-verification" content="fef300e32a3ccd0ab812fa924efc7aa8d81be8ff60f5d28650b77dc7a66e6677">
   <script src="https://analytics.ahrefs.com/analytics.js" data-key="pFslGvnSpShtJsJC8Hh5Cg" async></script>
   <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/Freelankarx/Freelankarx/main/freelankarx%20logo.png">
   <link rel="verifyforzoho" href="verifyforzoho.html">
