--- a/about.html
+++ b/about.html
@@ -3,13 +3,13 @@
   <meta charset="UTF-8">
   <title>About Freelankarx | Your Digital Growth Partner</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Learn why Freelankarx exists and how Olamilekan Muraina helps everyday entrepreneurs build freedom through e-commerce and automation.">
+  <meta name="description" content="Learn why Freelankarx exists and how Olamilekan Muraina helps everyday entrepreneurs build freedom through e‑commerce and automation.">
   <link rel="canonical" href="https://freelankarx.com/about.html"/>
   <style>
     :root{
       --primary:#1E3A8A;          /* Deep brand blue (adjust if needed to match site) */
       --accent:#6366F1;           /* Indigo accent */
-      --text:#111827;             /* Near-black text */
+      --text:#111827;             /* Near‑black text */
       --bg:#ffffff;               /* Background */
     }
     body{margin:0;font-family:'Poppins',sans-serif;background:var(--bg);color:var(--text);line-height:1.7;}
@@ -32,15 +32,15 @@
 </head>
 <body><header class="hero">
   <h1>Turning Bold Ideas into Online Freedom</h1>
-  <p>Hello, I’m <strong>Olamilekan “Freelankarx” Muraina</strong>. I build automation-driven Shopify stores and teach the exact playbooks that helped 300+ entrepreneurs move from side-hustle to full-time income—without burning out or breaking the bank.</p>
+  <p>Hello, I’m <strong>Olamilekan “Freelankarx” Muraina</strong>. I build automation‑driven Shopify stores and teach the exact playbooks that helped 300+ entrepreneurs move from side‑hustle to full‑time income—without burning out or breaking the bank.</p>
 </header><section class="wrap">
   <h2>My Journey</h2>
-  <p>I started with a single laptop, a shaky internet connection in Ibadan, and a dream that the digital world could level the playing field. Ten years later, that dream has powered brands you now see trending on TikTok, stocked in big-box stores and crossing 7-figure run-rates.</p>
-  <p>But numbers only tell half the story. The real win is watching a founder’s eyes light up when their first sale notification hits—or when automation frees up their nights to tuck in their kids. That adrenaline-rush is what keeps me pushing boundaries every day.</p>  <h2>Why Entrepreneurs Trust Freelankarx</h2>
+  <p>I started with a single laptop, a shaky internet connection in Ibadan, and a dream that the digital world could level the playing field. Ten years later, that dream has powered brands you now see trending on TikTok, stocked in big‑box stores and crossing 7‑figure run‑rates.</p>
+  <p>But numbers only tell half the story. The real win is watching a founder’s eyes light up when their first sale notification hits—or when automation frees up their nights to tuck in their kids. That adrenaline‑rush is what keeps me pushing boundaries every day.</p>  <h2>Why Entrepreneurs Trust Freelankarx</h2>
   <div class="values">
     <div class="value-card">
-      <h3>Plain-English Clarity</h3>
-      <p>I translate geeky growth tactics into step-by-step actions your 12-year-old cousin could follow.</p>
+      <h3>Plain‑English Clarity</h3>
+      <p>I translate geeky growth tactics into step‑by‑step actions your 12‑year‑old cousin could follow.</p>
     </div>
     <div class="value-card">
       <h3>Automation Obsessed</h3>
@@ -48,7 +48,7 @@
     </div>
     <div class="value-card">
       <h3>Results Over Hype</h3>
-      <p>Every strategy is pressure-tested in my own e-commerce labs before it ever touches your brand.</p>
+      <p>Every strategy is pressure‑tested in my own e‑commerce labs before it ever touches your brand.</p>
     </div>
     <div class="value-card">
       <h3>Radical Transparency</h3>
@@ -57,8 +57,8 @@
   </div>  <h2>Mission &amp; Vision</h2>
   <p><strong>Mission:</strong> Equip everyday people with the digital tools, mindset and mentorship they need to build businesses that outlive algorithms.</p>
   <p><strong>Vision:</strong> A world where geography and capital are no barriers to creating wealth and impact online.</p>  <h2>Ready to Write Your Story?</h2>
-  <p>If you’re tired of random hacks and want a mentor who treats your dream like their own, let’s connect. Whether you grab my free AI Toolkit or hire me for a full-scale launch, you’ll walk away with clarity, confidence and a plan that actually works.</p>  <div class="cta">
-    <a href="/contact">Start a Conversation</a>
+  <p>If you’re tired of random hacks and want a mentor who treats your dream like their own, let’s connect. Whether you grab my free AI Toolkit or hire me for a full‑scale launch, you’ll walk away with clarity, confidence and a plan that actually works.</p>  <div class="cta">
+    <a href="https://linktr.ee/Freelankarx" target="_blank" rel="noopener">Start a Conversation</a>
   </div>
 </section></body>
 </html>
