--- a/toolkit.html
+++ b/toolkit.html
@@ -126,19 +126,19 @@ footer { text-align: center; padding: 30px 20px; font-size: 0.85rem; color: #8e9
   #sib-container input:-ms-input-placeholder {
     text-align: left;
     font-family: Helvetica, sans-serif;
-    color: #c0ccda;
+    color: #0a0b0b;
   }
 
   #sib-container input::placeholder {
     text-align: left;
     font-family: Helvetica, sans-serif;
-    color: #c0ccda;
+    color: #0a0b0b;
   }
 
   #sib-container textarea::placeholder {
     text-align: left;
     font-family: Helvetica, sans-serif;
-    color: #c0ccda;
+    color: #0a0b0b;
   }
 
   #sib-container a {
@@ -175,15 +175,15 @@ footer { text-align: center; padding: 30px 20px; font-size: 0.85rem; color: #8e9
       </div>
     </div>
     <div></div>
-    <div id="sib-container" class="sib-container--large sib-container--vertical" style="text-align:center; background-color:rgba(121,108,108,0.8); max-width:540px; border-radius:22px; border-width:1px; border-color:#C0CCD9; border-style:solid; direction:ltr">
-      <form id="sib-form" method="POST" action="https://ecf41424.sibforms.com/serve/MUIFAEmfhtY7kMuWlQcUTvTvF-4AyKrd7fUp_pdoh2akgNP8MVHfzQkliB9zZv2TLqRS7kY3CqWy8p8M2ht7YRqUVQBLOg8akGGYOh-vSmG_yntkxj6FM1OKQBdWcvafg1TkKYTSmMIz6PbNxlkho06izW_J1H1r6qAccsNDCgOtExUagiIeDF4ue8w8MjLs5NEHQXGcHFm7HgSu" data-type="subscription">
+    <div id="sib-container" class="sib-container--large sib-container--vertical" style="text-align:center; background-color:rgba(5,5,5,0.66); max-width:540px; border-radius:22px; border-width:1px; border-color:#0b0c0d; border-style:solid; direction:ltr">
+      <form id="sib-form" method="POST" action="https://ecf41424.sibforms.com/serve/MUIFAPODeTwSamQbS_3AL_mJI6k8DyqoJMQrznU_klBE7EsixTALu4QS8prcVBF5AaJbg5-1Afe2Bfm9ByxtwnbdV9PcEqrAePycE_48gZmmDKCZoF4upkXqDkoaHaxBYxDfUroLGtiBMoZokZT6DM_6X9HV03RrHwu-miomVRAb-DuzkqwGWDYpe7hoAcqI07ZgAuOYPEMNBDWf" data-type="subscription">
         <div style="padding: 8px 0;">
           <div class="sib-input sib-form-block">
             <div class="form__entry entry_block">
               <div class="form__label-row ">
 
                 <div class="entry__field">
-                  <input class="input " type="text" id="EMAIL" name="EMAIL" autocomplete="off" placeholder="EMAIL" data-required="true" required />
+                  <input class="input " type="text" id="EMAIL" name="EMAIL" autocomplete="off" placeholder="" data-required="true" required />
                 </div>
               </div>
 
