--- a/toolkit.html
+++ b/toolkit.html
@@ -126,19 +126,19 @@ footer { text-align: center; padding: 30px 20px; font-size: 0.85rem; color: #8e9
   #sib-container input:-ms-input-placeholder {
     text-align: left;
     font-family: Helvetica, sans-serif;
-    color: #0a0b0b;
+    color: #0d0c0c;
   }
 
   #sib-container input::placeholder {
     text-align: left;
     font-family: Helvetica, sans-serif;
-    color: #0a0b0b;
+    color: #0d0c0c;
   }
 
   #sib-container textarea::placeholder {
     text-align: left;
     font-family: Helvetica, sans-serif;
-    color: #0a0b0b;
+    color: #0d0c0c;
   }
 
   #sib-container a {
@@ -175,8 +175,8 @@ footer { text-align: center; padding: 30px 20px; font-size: 0.85rem; color: #8e9
       </div>
     </div>
     <div></div>
-    <div id="sib-container" class="sib-container--large sib-container--vertical" style="text-align:center; background-color:rgba(5,5,5,0.66); max-width:540px; border-radius:22px; border-width:1px; border-color:#0b0c0d; border-style:solid; direction:ltr">
-      <form id="sib-form" method="POST" action="https://ecf41424.sibforms.com/serve/MUIFAPODeTwSamQbS_3AL_mJI6k8DyqoJMQrznU_klBE7EsixTALu4QS8prcVBF5AaJbg5-1Afe2Bfm9ByxtwnbdV9PcEqrAePycE_48gZmmDKCZoF4upkXqDkoaHaxBYxDfUroLGtiBMoZokZT6DM_6X9HV03RrHwu-miomVRAb-DuzkqwGWDYpe7hoAcqI07ZgAuOYPEMNBDWf" data-type="subscription">
+    <div id="sib-container" class="sib-container--large sib-container--vertical" style="text-align:center; background-color:rgba(11,10,10,0.66); max-width:540px; border-radius:22px; border-width:1px; border-color:#ebeef1; border-style:solid; direction:ltr">
+      <form id="sib-form" method="POST" action="https://ecf41424.sibforms.com/serve/MUIFADgHX7co8DcxnMneVQycaa9L0UWeqzlEdDVMn9RYEI2llM1HoCV5uWeBm9KHhgwllBquCkGOL52GvkCVmxTE-KhyvHZ-DBW1J2IPeW9RIPU3M_ifNPD_46hJbAd3BPOZQtdDyfEWEDp71qhbLlaqOoDkONJjCbLh87nuYLFqI6Im4-DlO4fWU71stl_XxF9Qa4W_porNK-8y" data-type="subscription">
         <div style="padding: 8px 0;">
           <div class="sib-input sib-form-block">
             <div class="form__entry entry_block">
@@ -213,6 +213,34 @@ footer { text-align: center; padding: 30px 20px; font-size: 0.85rem; color: #8e9
 
 <!-- START - We recommend to place the below code in footer or bottom of your website html  -->
 <script>
+  window.REQUIRED_CODE_ERROR_MESSAGE = 'Please choose a country code';
+  window.LOCALE = 'en';
+  window.EMAIL_INVALID_MESSAGE = window.SMS_INVALID_MESSAGE = "The information provided is invalid. Please review the field format and try again.";
+
+  window.REQUIRED_ERROR_MESSAGE = "pls fill in the detail ";
+
+  window.GENERIC_INVALID_MESSAGE = "The information provided is invalid. Please review the field format and try again.";
+
+
+
+
+  window.translation = {
+    common: {
+      selectedList: '{quantity} list selected',
+      selectedLists: '{quantity} lists selected',
+      selectedOption: '{quantity} selected',
+      selectedOptions: '{quantity} selected',
+    }
+  };
+
+  var AUTOHIDE = Boolean(0);
+</script>
+
+<script defer src="https://sibforms.com/forms/end-form/build/main.js"></script>
+
+
+<!-- END - We recommend to place the above code in footer or bottom of your website html  -->
+<!-- End Brevo Form -->
   window.REQUIRED_CODE_ERROR_MESSAGE = 'Please choose a country code';
   window.LOCALE = 'en';
   window.EMAIL_INVALID_MESSAGE = window.SMS_INVALID_MESSAGE = "The information provided is invalid. Please review the field format and try again.";
