--- a/toolkit.html
+++ b/toolkit.html
@@ -128,19 +128,19 @@ footer { text-align: center; padding: 30px 20px; font-size: 0.85rem; color: #8e9
   #sib-container input:-ms-input-placeholder {
     text-align: left;
     font-family: Helvetica, sans-serif;
-    color: #0d0c0c;
+    color: #000000;
   }
 
   #sib-container input::placeholder {
     text-align: left;
     font-family: Helvetica, sans-serif;
-    color: #0d0c0c;
+    color: #000000;
   }
 
   #sib-container textarea::placeholder {
     text-align: left;
     font-family: Helvetica, sans-serif;
-    color: #0d0c0c;
+    color: #000000;
   }
 
   #sib-container a {
@@ -153,7 +153,7 @@ footer { text-align: center; padding: 30px 20px; font-size: 0.85rem; color: #8e9
 
 <!-- START - We recommend to place the below code where you want the form in your website html  -->
 <div class="sib-form" style="text-align: center;
-         background-color: transparent;                                 ">
+         background-color: #EFF2F7;                                 ">
   <div id="sib-form-container" class="sib-form-container">
     <div id="error-message" class="sib-form-message-panel" style="font-size:16px; text-align:left; font-family:Helvetica, sans-serif; color:#661d1d; background-color:#ffeded; border-radius:3px; border-color:#ff4949;max-width:540px;">
       <div class="sib-form-message-panel__text sib-form-message-panel__text--center">
@@ -177,15 +177,15 @@ footer { text-align: center; padding: 30px 20px; font-size: 0.85rem; color: #8e9
       </div>
     </div>
     <div></div>
-    <div id="sib-container" class="sib-container--large sib-container--vertical" style="text-align:center; background-color:rgba(11,10,10,0.66); max-width:540px; border-radius:22px; border-width:1px; border-color:#ebeef1; border-style:solid; direction:ltr">
-      <form id="sib-form" method="POST" action="https://ecf41424.sibforms.com/serve/MUIFADgHX7co8DcxnMneVQycaa9L0UWeqzlEdDVMn9RYEI2llM1HoCV5uWeBm9KHhgwllBquCkGOL52GvkCVmxTE-KhyvHZ-DBW1J2IPeW9RIPU3M_ifNPD_46hJbAd3BPOZQtdDyfEWEDp71qhbLlaqOoDkONJjCbLh87nuYLFqI6Im4-DlO4fWU71stl_XxF9Qa4W_porNK-8y" data-type="subscription">
+    <div id="sib-container" class="sib-container--large sib-container--vertical" style="text-align:center; background-color:transparent; max-width:540px; border-radius:24px; border-width:1px; border-color:#C0CCD9; border-style:solid; direction:ltr">
+      <form id="sib-form" method="POST" action="https://ecf41424.sibforms.com/serve/MUIFAD6GjjsXaLBVZMhYAN2fj8nYBTNHd2Dwgq_t21qJFYe1riAndmoxVobbEZQGy1ngisDSXxXUplVKTwcDeKy7oh7pYBP-V_HQfutFcyD1TygupxEvLgOzcXeiJw3BnJKGT4t1RLp-onxzFubMBmsfT1CyAgEjZDYwkagml22VzpCL9rZGXA7z6AsNjDlKgHz55qn3JIAZxtRV" data-type="subscription">
         <div style="padding: 8px 0;">
           <div class="sib-input sib-form-block">
             <div class="form__entry entry_block">
               <div class="form__label-row ">
 
                 <div class="entry__field">
-                  <input class="input " type="text" id="EMAIL" name="EMAIL" autocomplete="off" placeholder="" data-required="true" required />
+                  <input class="input " type="text" id="EMAIL" name="EMAIL" autocomplete="off" placeholder="EMAIL" data-required="true" required />
                 </div>
               </div>
 
@@ -196,7 +196,7 @@ footer { text-align: center; padding: 30px 20px; font-size: 0.85rem; color: #8e9
         </div>
         <div style="padding: 8px 0;">
           <div class="sib-form-block" style="text-align: center">
-            <button class="sib-form-block__button sib-form-block__button-with-loader" style="font-size:16px; text-align:center; font-weight:700; font-family:Helvetica, sans-serif; color:#FFFFFF; background-color:#3E4857; border-radius:3px; border-width:0px;" form="sib-form" type="submit">
+            <button class="sib-form-block__button sib-form-block__button-with-loader" style="font-size:16px; text-align:center; font-weight:700; font-family:Helvetica, sans-serif; color:#FFFFFF; background-color:#3E4857; border-radius:18px; border-width:0px;" form="sib-form" type="submit">
               <svg class="icon clickable__icon progress-indicator__icon sib-hide-loader-icon" viewBox="0 0 512 512" style="">
                 <path d="M460.116 373.846l-20.823-12.022c-5.541-3.199-7.54-10.159-4.663-15.874 30.137-59.886 28.343-131.652-5.386-189.946-33.641-58.394-94.896-95.833-161.827-99.676C261.028 55.961 256 50.751 256 44.352V20.309c0-6.904 5.808-12.337 12.703-11.982 83.556 4.306 160.163 50.864 202.11 123.677 42.063 72.696 44.079 162.316 6.031 236.832-3.14 6.148-10.75 8.461-16.728 5.01z" />
               </svg>
