--- a/toolkit.html
+++ b/toolkit.html
@@ -153,7 +153,7 @@ footer { text-align: center; padding: 30px 20px; font-size: 0.85rem; color: #8e9
 
 <!-- START - We recommend to place the below code where you want the form in your website html  -->
 <div class="sib-form" style="text-align: center;
-         background-color: #EFF2F7;                                 ">
+         background-color: transparent;                                 ">
   <div id="sib-form-container" class="sib-form-container">
     <div id="error-message" class="sib-form-message-panel" style="font-size:16px; text-align:left; font-family:Helvetica, sans-serif; color:#661d1d; background-color:#ffeded; border-radius:3px; border-color:#ff4949;max-width:540px;">
       <div class="sib-form-message-panel__text sib-form-message-panel__text--center">
@@ -177,15 +177,15 @@ footer { text-align: center; padding: 30px 20px; font-size: 0.85rem; color: #8e9
       </div>
     </div>
     <div></div>
-    <div id="sib-container" class="sib-container--large sib-container--vertical" style="text-align:center; background-color:transparent; max-width:540px; border-radius:24px; border-width:1px; border-color:#C0CCD9; border-style:solid; direction:ltr">
-      <form id="sib-form" method="POST" action="https://ecf41424.sibforms.com/serve/MUIFAD6GjjsXaLBVZMhYAN2fj8nYBTNHd2Dwgq_t21qJFYe1riAndmoxVobbEZQGy1ngisDSXxXUplVKTwcDeKy7oh7pYBP-V_HQfutFcyD1TygupxEvLgOzcXeiJw3BnJKGT4t1RLp-onxzFubMBmsfT1CyAgEjZDYwkagml22VzpCL9rZGXA7z6AsNjDlKgHz55qn3JIAZxtRV" data-type="subscription">
+    <div id="sib-container" class="sib-container--large sib-container--vertical" style="text-align:center; background-color:rgba(71,54,54,1); max-width:540px; border-radius:24px; border-width:1px; border-color:#C0CCD9; border-style:solid; direction:ltr">
+      <form id="sib-form" method="POST" action="https://ecf41424.sibforms.com/serve/MUIFADROBfiW-H1hD2uzRt8rbo35j_N9YHATey5jQ6B24V3vz8oy74jjPCGv0qUO3MbgtuMOfvSigZGQPsju3hfRE4L1XCCVanUoixqyGqkMd6c7-y4ocVYZr97-3m9sMKfRLzYNdL2swcWY3_ocrqWEzJR6TYasBCX49yGgvy9oYw0gYpn1Pc_Ohy5vD--7fX33hMtZiuD4sqA4" data-type="subscription">
         <div style="padding: 8px 0;">
           <div class="sib-input sib-form-block">
             <div class="form__entry entry_block">
               <div class="form__label-row ">
 
                 <div class="entry__field">
-                  <input class="input " type="text" id="EMAIL" name="EMAIL" autocomplete="off" placeholder="EMAIL" data-required="true" required />
+                  <input class="input " type="text" id="EMAIL" name="EMAIL" autocomplete="off" placeholder="email" data-required="true" required />
                 </div>
               </div>
 
