--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
   <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/Freelankarx/Freelankarx/main/freelankarx%20logo.png">
   <link rel="verifyforzoho" href="verifyforzoho.html">
   <meta name="google-site-verification" content="WlYZuXBSoVmMkiGWiKsEb8AAkkEVGfLxbF51BDhYjrI" />
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TPTB92WSHX"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-TPTB92WSHX');
+</script>
   <!-- Google Tag Manager -->
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
