--- a/about/index.html
+++ b/about/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html><html lang="en">
 <head>
+  <link rel="canonical" href="https://freelankarx.com/about/index.html" />
   <meta charset="UTF-8">
   <title>About Freelankarx | Your Digital Growth Partner</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
