--- a/index.html
+++ b/index.html
@@ -121,11 +121,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/73821dffc1925e56088fbaec02702042713ad955/freelankarx_logo-removebg-preview.png" alt="FreelankarX Logo">
       </div>
       <ul>
-        <a href="/toolkit.html">Check out the Toolkit</a>
-        <a href="/about.html">About Freelankarx</a>
-        <li><a href="#about">About</a></li>
+        <li><a href="/about/">About</a></li>
         <li><a href="#services">Services</a></li>
-        <li><a href="#what-sets-me-apart">What Sets Me Apart</a></li>
+        <li><a href="/toolkit.html">Get Free Toolkit</a></li>
         <li><a href="#recent-results">Recent Results</a></li>
      
         <li><a href="#portfolio">Portfolio</a></li>
