--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <li><a href="#portfolio">Portfolio</a></li>
         <li><a href="#pricing">Pricing</a></li>
        
-        <li><a href="#testimonials">Testimonials</a></li>
+        <li><a href="/blog">Blogs</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
