--- a/about/index.html
+++ b/about/index.html
@@ -155,7 +155,7 @@ footer {
     <div class="header-nav">
       <ul>
         <li><a href="/">Home</a></li>
-        <li><a href="/about.html" class="active">About</a></li>
+        <li><a href="/about" class="active">About</a></li>
         <li><a href="/#services">Services</a></li>
         <li><a href="/#portfolio">Portfolio</a></li>
         <li><a href="/#contact">Contact</a></li>
