--- a/faq/why-shopify-no-sales/index.html
+++ b/faq/why-shopify-no-sales/index.html
@@ -8,7 +8,7 @@
   <meta property="og:description" content="Discover why mismatched traffic, low trust, and leaky funnels block Shopify orders—and the exact fixes to turn browsers into buyers." />
   <meta property="og:type" content="article" />
   <meta property="og:url" content="https://freelankarx.com/blog/why-no-shopify-sales" />
-  <meta property="og:image" content="https://freelankarx.com/assets/toolkit-preview.jpg" />  <link rel="icon" href="/favicon.ico" />
+  <meta property="og:image" content="https://freelankarx.com/assets/toolkit-preview.jpg" />  <link rel="icon" href="https://raw.githubusercontent.com/Freelankarx/Freelankarx/main/freelankarx%20logo.png" />
   <style>
     :root { --green:#22c55e; --bg:#0f0f0f; --text:#fff; --grey:#d1d5db; }
     *{box-sizing:border-box;margin:0}
@@ -26,7 +26,7 @@
 <body>
   <header>
     <a href="/" style="display:flex;align-items:center">
-      <img src="/logo.png" alt="Freelankarx" style="height:32px;width:auto;margin-right:8px">
+      <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/main/freelankarx%20logo.png" alt="Freelankarx" style="height:32px;width:auto;margin-right:8px">
       <span style="color:var(--green);font-weight:700;font-size:1.25rem">Freelankarx</span>
     </a>
     <nav>
